fix legend alignment

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -930,6 +930,7 @@ a#fdbk_tab {
 .legend .definition {
     font-size: 8pt;
     padding-left: 5px;
+    padding-top: 3px;
 }
 /* end legend */
 
